<resources>
    <string name="app_name">EatItV2</string>
    <string name="custom_title">Spots Dialog</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_cart">Clear Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_view_orders">View Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_categories">Categories</string>

    <string name="popular_category">Popular Categories</string>
    <string name="your_name">Your name</string>
    <string name="your_address">Your address</string>
    <string name="best_deals">Best Deals</string>
    <string name="name_of_food">Name of food</string>
    <string name="food_image">Food Image</string>
    <string name="show_comment">Show Comment</string>
    <string name="please_write_something">Please write something</string>
    <string name="food_detail_image">Food Detail Image</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="search">Search</string>
    <string name="example">Example</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="delivery_method">Delivery method</string>
    <string name="home_address">Home address</string>
    <string name="other_address">Other address</string>
    <string name="ship_to_this_address">Ship to this address</string>
    <string name="payment_method">Payment method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="braintree">Braintree</string>
    <string name="enter_your_comment">Enter your comment</string>
</resources>