<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/place_order_edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:hint="@string/enter_your_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/place_order_txt_address_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_method"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/place_order_edt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:hint="@string/enter_your_comment" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_method"
        android:textColor="@color/dialog_header_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/place_order_rdi_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/home_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/place_order_rdi_other_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/other_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/place_order_rdi_this_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/ship_to_this_address"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/dialog_header_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/place_order_rdi_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cash_on_delivery"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/place_order_rdi_braintree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/braintree"
            android:textColor="@color/dialog_text_color"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RadioGroup>


</LinearLayout>